add content to skill section and contact section

--- a/public/index.html
+++ b/public/index.html
@@ -48,5 +48,5 @@
 </body>
 <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
 <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
-
+<script src="https://kit.fontawesome.com/73f293ab23.js" crossorigin="anonymous"></script>
 </html>
