--- a/public/index.html
+++ b/public/index.html
@@ -10,14 +10,12 @@
   <meta property="og:title" content="Attila Bordan" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
-  <link
-  rel="stylesheet"
-  href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
-  integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM"
-  crossorigin="anonymous"/>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+    integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Martian+Mono:wght@300&family=Sedgwick+Ave+Display&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Martian+Mono:wght@300&family=Sedgwick+Ave+Display&display=swap"
+    rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@700&display=swap" rel="stylesheet">
   <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -34,10 +32,12 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
   <title>Attila Bordan</title>
+
 </head>
 
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
+  
   <div id="root"></div>
   <!--
       This HTML file is a template.
@@ -53,4 +53,5 @@
 <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
 <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
 <script src="https://kit.fontawesome.com/73f293ab23.js" crossorigin="anonymous"></script>
+
 </html>
