--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Martian+Mono:wght@300&family=Sedgwick+Ave+Display&display=swap"
     rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
   <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -37,7 +38,7 @@
 
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
-  
+
   <div id="root"></div>
   <!--
       This HTML file is a template.
