updated the scroll arrow changed font for skills

--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,8 @@
     rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Lato&family=Outfit:wght@700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Shadows+Into+Light+Two&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
   <!--
       manifest.json provides metadata used when your web app is installed on a
