--- a/public/index.html
+++ b/public/index.html
@@ -3,11 +3,44 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+  <link rel="icon" href="favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Attila Bordan is a web developer who builds user friendly, beautiful websites" />
-  <meta property="og:title" content="Attila Bordan" />
+  <!-- Primary Meta Tags -->
+  <title>Attila Bordan | Software Engineer | Portfolio</title>
+  <meta name="title" content="Attila Bordan | Software Engineer | Portfolio">
+  <meta name="description"
+    content="Attila Bordan is a Software Engineer who builds user-friendly, beautiful websites with React and modern web technologies. View portfolio, skills, and contact information.">
+  <meta name="author" content="Attila Bordan">
+  <meta name="keywords" content="Attila Bordan, software engineer, full stack developer, React, JavaScript, Node.js, TypeScript, GraphQL, MongoDB, Express, Python, responsive design, UI/UX, front-end development, back-end development, portfolio, cloud projects, Azure, serverless, Git, Agile, developer portfolio, Next.js, modern web technologies">
+
+  <meta name="robots" content="index, follow">
+  <meta name="language" content="English">
+  <meta name="revisit-after" content="7 days">
+
+  <meta property="og:title" content="Attila Bordan | Web Developer | Software Engineer | Portfolio">
+  <meta property="og:description"
+    content="Attila Bordan is a Software Engineer who builds user-friendly, beautiful websites with React and modern web technologies.">
+  <meta property="og:image" content="%PUBLIC_URL%/og-image.jpg">
+  <meta property="og:site_name" content="Attila Bordan Portfolio">
+
+  <!-- Structured Data / JSON-LD -->
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Person",
+      "name": "Attila Bordan",
+      "url": "https://bordanattila.github.io/Portfolio/",
+      "jobTitle": "Web Developer",
+      "sameAs": [
+        "https://github.com/bordanattila",
+        "https://www.linkedin.com/in/bordanattila/"
+      ],
+      "knowsAbout": ["React", "JavaScript", "Node.js", "TypeScript", "HTML", "CSS", "MongoDB", "Express", "GraphQL", "REST APIs", "Azure", "Serverless", "Web Development", "UI/UX", "Python", "Software Engineering"]
+
+    }
+    </script>
+
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
@@ -17,25 +50,10 @@
   <link href="https://fonts.googleapis.com/css2?family=Martian+Mono:wght@300&family=Sedgwick+Ave+Display&display=swap"
     rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Lato&family=Outfit:wght@700&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@700&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Shadows+Into+Light+Two&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Shadows+Into+Light+Two&display=swap"
+    rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
-  <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-  <title>Attila Bordan</title>
 
 </head>
 
@@ -43,16 +61,6 @@
   <noscript>You need to enable JavaScript to run this app.</noscript>
 
   <div id="root"></div>
-  <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
 </body>
 <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
 <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
